ajuste do index para diferentes layouts - 1

--- a/readme
+++ b/readme
@@ -1,9 +1,16 @@
 O que falta
     Index:
         [] Menu superior com submenus
-        [] Carousel com a foto dos artistas (MVP)
-        [] Texto encima do carousel com o nome do artista e a data do show deles (MVP)
-        [] Deixar a cor do header rbg(0,0,0) ao transpor o carousel (MVP)
+(MVP)        [] Carousel com a foto dos artistas
+(MVP)        [] Texto encima do carousel com o nome do artista e a data do show deles
+(MVP)        [] Deixar a cor do header rbg(0,0,0) ao transpor o carousel
     
     Barracas/gastronomia
-        [] Página temática para cada barraca (MVP 2 páginas)
+(MVP 2 página)        [] Página temática para cada barraca
+
+    Expositores
+(MVP 2 )        [] Uma página para cada expositor
+
+    Créditos
+        [] Página de créditos aos desenvolvedores do projeto
+        [] Licença das imagens e ícones utilizados no projeto
